--- a/index.html
+++ b/index.html
@@ -13,8 +13,105 @@
     <link type="text/css" rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div>
+    <!-- 导航start -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Blog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- 导航stop -->
     <div class="container">
-        
+        <!-- page content start -->
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-8">
+                    <!-- banner start-->
+                    <div class="banner" style="width: 100%;height: 21.9rem;background-color: #b3e8e3;margin-bottom: 1.4rem;">
+
+                    </div>
+                    <!-- banner stop -->
+
+                    <div class="clearfix"></div>
+
+                    <!-- note start -->
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+
+                    <div class="clearfix"></div>
+
+                    <article class="note" style="width: 100%;height: 21rem;background-color: #f0ad4e;margin-bottom: 1.4rem;">
+
+                    </article>
+                    <!-- note stop -->
+
+
+                </div>
+
+                <div class="col-md-4">
+                    <h1>右部</h1>
+                </div>
+            </div>
+        </div>
+        <!-- page content stop -->
     </div>
+</div>
+<script type="text/javascript" src="./js/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="./bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
