--- a/index.html
+++ b/index.html
@@ -282,49 +282,173 @@
                     </article>
                     <!-- note stop -->
 
-
+                    <div class="clearfix essay-more">
+                        <a href="#" class="btn btn-secondary float-right">更多&rarr;</a>
+                    </div>
                 </div>
                 <!-- content stop -->
 
                 <!-- right start -->
                 <div class="col-md-4">
-                    <div class="hot-essays">
-                        <div class="hot-essays-title">
+                    <div class="right-pendant">
+                        <div class="right-pendant-title">
                             <h4 class="title">热门文章</h4>
                         </div>
-                        <div class="hot-essays-content">
+                        <div class="right-pendant-content">
                             <ul>
                                 <li>
                                     <a href="#">
                                         Vue中使用JavaScript加密库crypto-js
                                     </a>
                                 </li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
-                                <li>Vue中使用JavaScript加密库crypto-js</li>
+                                <li>
+                                    <a href="#">
+                                        Laravel5.5新特性-安装篇
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Laravel 5 中使用 JWT（Json Web Token）
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Any-基于 Laravel5.4 新的权限管理后台骨架
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Windows上 Laravel 的 Homestead 开发环境安装
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        l5-repository在Laravel中使用安装篇
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Laravel 5 中使用仓库(Repository)模式
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="clearfix"></div>
 
-                    <div class="" style="width: 100%;height: 21rem;background-color: #ceffee;margin-bottom: 1.4rem;">
-                        右部
+                    <div class="right-pendant">
+                        <div class="right-pendant-title">
+                            <h4 class="title">热门推荐</h4>
+                        </div>
+                        <div class="right-pendant-content">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        HTTP路由实例教程（一）—— 基本使用及路由参数
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Laravel 服务容器实例教程 —— 深入理解控制反转（IoC）和依赖注入（DI）
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        HTTP路由实例教程（二）—— 路由命名和路由分组
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        在 Windows 中安装 Laravel 5.1.X
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        HTTP路由实例教程（三）—— CSRF攻击原理及其防护
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        HTTP路由实例教程（一）—— 基本使用及路由参数
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="clearfix"></div>
 
-                    <div class="" style="width: 100%;height: 21rem;background-color: #ceffee;margin-bottom: 1.4rem;">
-                        右部
+                    <div class="right-pendant">
+                        <div class="right-pendant-title">
+                            <h4 class="title">最新评论</h4>
+                        </div>
+                        <div class="right-pendant-content">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        two say on 使用 Laravel 5.1 内置的本地化功能轻松实现多语言支持
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        陈宝金 on 使用 Laravel 5.1 内置的本地化功能轻松实现多语言支持
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        trepeng on 捐赠学院
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        luking on [ Laravel 5.4 文档 ] 前端 —— JavaScript & CSS 脚手架
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        zenglin on [ Laravel 5.3 文档 ] 视图 & 模板 —— Blade模板
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="clearfix"></div>
 
-                    <div class="" style="width: 100%;height: 21rem;background-color: #ceffee;margin-bottom: 1.4rem;">
-                        右部
+                    <div class="right-pendant">
+                        <div class="right-pendant-title">
+                            <h4 class="title">友情链接</h4>
+                        </div>
+                        <div class="right-pendant-content">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        小胡发掘网
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        小胡发掘网
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        小胡发掘网
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        小胡发掘网
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        小黄博客
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- right stop -->
@@ -333,9 +457,17 @@
         <!-- page content stop -->
     </div>
 
+    <hr>
+
     <!-- footer start -->
     <div class="footer" style="height: 5rem;background-color: #333;">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="copyright text-muted">Copyright &copy;Dark Visitor &nbsp; 鄂ICP备17004631号</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- footer stop -->
 </div>
