--- a/phpessay.html
+++ b/phpessay.html
@@ -64,38 +64,38 @@
                 <div class="banner"
                      style="width: 100%;background-color: #b3e8e3;margin-bottom: 1.4rem;">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                          <ol class="carousel-indicators">
-                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                          </ol>
-                          <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                  <img class="d-block w-100" src="./img/1.jpg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                  <img class="d-block w-100" src="./img/2.jpg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                  <img class="d-block w-100" src="./img/3.jpg" alt="Third slide">
-                              </div>
-                              <div class="carousel-item">
-                                  <img class="d-block w-100" src="./img/4.jpg" alt="Third slide">
-                              </div>
-                              <div class="carousel-item">
-                                  <img class="d-block w-100" src="./img/5.jpg" alt="Third slide">
-                              </div>
-                          </div>
-                          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="sr-only">Next</span>
-                          </a>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="./img/1.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="./img/2.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="./img/3.jpg" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="./img/4.jpg" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="./img/5.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
                 <!-- banner stop -->
@@ -516,7 +516,7 @@
     <!-- footer stop -->
 
     <!-- back to top start -->
-    <a href="javascript:void(0);" class="back-to-top"></a>
+    <a href="javascript:void(0);" class="back-to-top" onclick="goScrollTop()"></a>
     <!-- back to top stop -->
 </div>
 <script type="text/javascript" src="./js/jquery-3.2.1.js"></script>
